website/code/wordfreq-icpp.log
BUILD COMMANDS FOR: wordfreq.icpp

Thu Dec  1 23:21:49 PST 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  wordfreq.c++ -o wordfreq.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc wordfreq.c++.o -o wordfreq.icpp_run -O3 -ip -static -unroll  
wordfreq.c++(105): error: qualified name is not allowed
  typedef std::hash_map<char const *, int, str_hash_compare> counter;
          ^

wordfreq.c++(105): error: expected a ";"
  typedef std::hash_map<char const *, int, str_hash_compare> counter;
                       ^

wordfreq.c++(114): error: identifier "counter" is undefined
      counter hist;
      ^

wordfreq.c++(118): error: name followed by "::" must be a class or namespace name
  	counter::iterator i = hist.find(w);
  	^

wordfreq.c++(118): error: expected a ";"
  	counter::iterator i = hist.find(w);
  	                  ^

wordfreq.c++(119): error: identifier "i" is undefined
  	if (i == hist.end()) hist[strcpy(new char[len+1], w)] = 1;
  	    ^

compilation aborted for wordfreq.c++ (code 2)
make[3]: [wordfreq.icpp_run] Error 2 (ignored)
rm: cannot remove `wordfreq.c++.o': No such file or directory
rm: cannot remove `wordfreq.o': No such file or directory
make[3]: [wordfreq.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

wordfreq.icpp_run %A
Error, could not exec wordfreq.icpp_run 5 (No such file or directory)
PATH=/opt/shootout/shootout/bench/wordfreq:/opt/shootout/shootout/bench/wordfreq/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
